# adminka-stats

./: .env.example  .gitignore  CLAUDE.md  DATABASE_INTEGRATION_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  app.py  auth.py  pyproject.toml  requirements.txt  test_parallel.py
.claude/: settings.local.json
pages/: 1_📊_Dashboard.py  2_🔑_API_Keys.py  3_⚙️_Processing.py  4_📈_Ticker_Analytics.py
utils/: api_monitors.py
